# mint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mint  mint.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/timesheet/: SKILL.md
.clawpatch/: project.json
.clawpatch/features/: feat_cli-command_832a326ac4.json  feat_cli-command_b227ac0623.json  feat_cli-command_f51cbb7c31.json  feat_library_c83dde8db7.json  feat_test-suite_a6226f638f.json  feat_test-suite_b323288fb4.json
.clawpatch/findings/: fnd_sig-feat-cli-command-832a326ac4-_0813217f94.json  fnd_sig-feat-cli-command-832a326ac4-_d34bae2641.json  fnd_sig-feat-cli-command-b227ac0623-_07235a7950.json  fnd_sig-feat-cli-command-f51cbb7c31-_232f04adb4.json  fnd_sig-feat-cli-command-f51cbb7c31-_f2144a7d6b.json  fnd_sig-feat-library-c83dde8db7-e064_4ae84e7436.json  fnd_sig-feat-test-suite-a6226f638f-7_8c84e6068b.json  fnd_sig-feat-test-suite-b323288fb4-d_4de0532cc9.json
.clawpatch/reports/: 20260628T165641-edcb72.md
.clawpatch/runs/: 20260628T165641-edcb72.json  20260628T173929-5da243.json
.github/workflows/: live-record.yml  offline-ci.yml
.mint/specs/: example.mint.md
docs/: spec-authoring.md
docs/codeplain-research/: 01-what-codeplain-is.md  02-plain-language-and-slicing.md  03-renderer-mechanics.md  04-plain-forge-practice.md  05-build-our-own.md  06-risks-and-open-questions.md  README.md  capsule.md  sources.md
docs/regenerative-mvp/: README.md  architecture.md  cli-workflow.md  data-model.md  decision-log.md  implementation-briefs.md  purpose.md
docs/regenerative-system/: README.md  architecture.md  commands.md  cost-and-budgets.md  known-limits.md  metadata-and-checkpoints.md  module-graph.md  record-replay.md  release-and-ci.md  renderer-contract.md  spec-format.md  test-quality.md  typescript.md
examples/: README.md
examples/odq/: README.md
examples/scrub/: .gitignore  README.md
examples/scrub/test_scripts/: run_unit_tests.sh
examples/timesheet/: README.md
resources/replay-fixtures/: responses.json
scripts/: regenerate_replay_cassettes.py
specs/: calc-cli.mint.md  evaluator.mint.md  example.mint.md  lexer.mint.md  mint-hashing.mint.md  parser.mint.md  tasklist.mint.md  taskstore.mint.md
src/mint_cli/: __init__.py  cli.py  config.py  errors.py  gitutil.py  hashing.py  modgraph.py  specs.py  stacks.py  state.py  test_quality.py  workflow.py
test_scripts/: prepare_environment.sh  run_conformance_tests.sh  run_unit_tests.sh
tests/: conftest.py  test_calc_graph.py  test_cli.py  test_config.py  test_modgraph.py  test_python_stack.py  test_renderer.py  test_self_hosting.py  test_specs.py  test_test_quality.py  test_typescript_stack.py  test_version_consistency.py  test_workflow.py
tests/e2e/: test_cli_e2e.py
(+25 files in other folders)
