[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mint-regenerative"
version = "1.0.0"
description = "Local Codeplain-inspired regenerative coding experiment"
requires-python = ">=3.12"
readme = "docs/regenerative-system/README.md"
license = "MIT"
authors = [
  { name = "Mint contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest==9.0.3"]
live = ["anthropic>=0.40,<1"]

[project.scripts]
mint = "mint_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["generated", "conformance", ".git", ".mintgen"]
